[package]
name = "FunctionHandler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
eframe = "0.22.0"
egui_extras = "0.22.0"
fs = "0.0.5"
image = { version = "0.24", default-features = false, features = ["png"] }
plotters = "0.3.5"
